crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__alias.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  ALIAS
    IDENT `foo`
    PIPELINE
      COMMAND
        STRING `echo`
        STRING `hello`
        STRING `world`

