crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__assignments.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  ASSIGNMENT
      IDENT `x`
      BINOP `+`
        NUMBER `1`
        NUMBER `1`

