crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__basic_commands.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      STRING `hello`
      STRING `world`

