crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__bool_infix.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      BINOP `<=`
        BINOP `+`
          NUMBER `1`
          NUMBER `1`
        NUMBER `2`

