crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__booleans.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      BINOP `+`
        BOOLEAN `true`
        BOOLEAN `false`
      STRING `true`

