crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__break_and_continue.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  WHILE
    BINOP `==`
      IDENT `x`
      NUMBER `3`
    BODY
      BREAK
      CONTINUE

