crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__captures.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      CAPTURE
        PIPELINE
          COMMAND
            STRING `echo`
            STRING `hi`
          COMMAND
            STRING `wc`
            STRING `-l`

