crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__env_set.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `cargo`
      STRING `test`
    ENV
      ENV_SET
        IDENT `RUST_LOG`
        STRING `trace`
      ENV_SET
        IDENT `RUST_BACKTRACE`
        STRING `1`

