crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__env_vars.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  PIPELINE
    COMMAND
      STRING `echo`
      ENV_VAR `HELLO`
      BINOP `+`
        ENV_VAR `HOME`
        STRING `hello`

