crates/wsh-lang/src/parser/v2/snapshots/wsh_lang__parser__v2__tests__export.snap
---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: ast
---
ROOT
  EXPORT
    IDENT `HELLO`
    BINOP `+`
      NUMBER `1`
      NUMBER `1`
  PIPELINE
    COMMAND
      STRING `echo`
      STRING `hi`

